@@ -4,6 +4,7 @@ public class Demo4 {
 
     public static void main(String[] args) {
 
+        //-XX:NewSize=10485760 -XX:MaxNewSize=10485760 -XX:InitialHeapSize=20971520 -XX:MaxHeapSize=20971520 -XX:SurvivorRatio=8 -XX:MaxTenuringThreshold=15 -XX:PretenureSizeThreshold=3145728 -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Xloggc:Demo4.log
         byte[] array1 = new byte[4 * 1024 * 1024];
         array1 = null;
 
